--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,18 @@
+@media (min-width: 992px)
+bootstrap.css:1601
+.container {
+    width: 1170px;
+}
+@media (min-width: 768px)
+bootstrap.css:1601
+.container {
+    width: 1170px;
+  }
+@media (min-width: 1200px)
+bootstrap.css:1601
+.container {
+    width: 1170px;
+}
 .header {
   background-image: url("https://img.grouponcdn.com/deal/2HwR6FiNzyux2cfzobXgEgwamzjY/2H-2000x1200/v1/c700x420.jpg");
   color: white;
@@ -10,7 +25,19 @@
   text-shadow: 4px 4px #000;
   text-align: center;
 }
-.container {
+.boxed {
+  width:1180px;
+  height: 673px;
+  margin-left: -15px;
+
+}
+.box1 {
+  width: 980px;
+  float: left;
+}
+.box2 {
+  width: 200px;
+  float: left;
 }
 
 .header h1 {
@@ -59,6 +86,7 @@ body {
   border: 10px solid #52343A;
   background-color: #F2F2F2;
   margin-bottom: 20px;
+  width: 1200px;
 }
 #itemsColumn {
   text-align: center;
@@ -81,12 +109,14 @@ body {
   width: 125px;
   height: 215px;
   position: relative;
-  top: -460px;
-  left: 730px;
+  top: -450px;
+  left: 748px;
+  z-index: 2;
 }
 #door:hover {
   background-color: #F2F2F2;
   opacity: .4;
+
 }
 .card-img-top {
   width: 100%;
@@ -98,7 +128,7 @@ body {
   height: 20px;
   position: relative;
   z-index: 1;
-  top: -235px;
+  top: -455px;
   left: 360px;
 }
 #key1:hover {
