--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,3 @@
-@media (min-width: 992px)
-bootstrap.css:1601
-.container {
-    width: 1170px;
-}
-@media (min-width: 768px)
-bootstrap.css:1601
-.container {
-    width: 1170px;
-  }
-@media (min-width: 1200px)
-bootstrap.css:1601
-.container {
-    width: 1170px;
-}
 .header {
   background-image: url("https://img.grouponcdn.com/deal/2HwR6FiNzyux2cfzobXgEgwamzjY/2H-2000x1200/v1/c700x420.jpg");
   color: white;
@@ -89,7 +74,6 @@ body {
   width: 1200px;
 }
 #itemsColumn {
-  text-align: center;
   height: 100%;
 }
 .col-md-2 {
@@ -122,6 +106,9 @@ body {
   width: 100%;
   margin-top: 15px;
 }
+.card {
+  margin: auto;
+}
 
 #key1 {
   width: 53px;
@@ -134,17 +121,32 @@ body {
 #key1:hover {
   opacity: 0.5;
 }
+#itemsColumn {
+  padding: 15px;
+}
+#itemsColumn h3 {
+  text-align: center;
 
+  border-bottom: 1px solid #292929;
+}
+#inventory {
+  text-align: left;
+}
+#inventory li {
+  text-align: left;
+  list-style: none;
+  margin-left: -21px;
+}
 
 
 #instructionsColumn {
   /*margin-top: -18px;*/
   font-family: monospace;
   font-size: 20px;
-}
+  text-align: center;
 
-li {
-  text-align:center;
+}
+#instructionsColumn li {
   list-style: none;
 }
 
