--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ body {
 
 #introText {
   padding: 15px;
-  color: #C29982;
+  color: #292929;
   font-weight: bold;
   font-size: 20px;
 }
@@ -65,7 +65,10 @@ body {
   width: 100%;
   background-color:#7D5B52;
 }
-
+#room2 {
+  width: 100%;
+  background-color:#7D5B52;
+}
 .roomarea {
   /*margin-top: 15px;*/
   border: 10px solid #52343A;
@@ -110,17 +113,7 @@ body {
   margin: auto;
 }
 
-#key1 {
-  width: 53px;
-  height: 20px;
-  position: relative;
-  z-index: 1;
-  top: -455px;
-  left: 360px;
-}
-#key1:hover {
-  opacity: 0.5;
-}
+
 #itemsColumn {
   padding: 15px;
 }
@@ -169,4 +162,29 @@ blockquote footer {
 }
 .buttonborder {
   margin: 10px;
+}
+/*Room 1 */
+#key1 {
+  width: 53px;
+  height: 20px;
+  position: relative;
+  z-index: 1;
+  top: -455px;
+  left: 360px;
+}
+#key1:hover {
+  opacity: 0.5;
+}
+
+/*Room 2*/
+#r2_book {
+  width: 135px;
+  height: 71px;
+  position: relative;
+  z-index: 1;
+  top: -345px;
+  left: 665px;
+}
+#r2_book:hover {
+  opacity: 0.5;
 }
