implement room2 items, specs and saturn

--- a/css/styles.css
+++ b/css/styles.css
@@ -182,9 +182,31 @@ blockquote footer {
   height: 71px;
   position: relative;
   z-index: 1;
-  top: -345px;
+  top: -125px;
   left: 665px;
 }
 #r2_book:hover {
+  opacity: 0.5;
+}
+#r2_specs {
+  width: 45px;
+  height: 15px;
+  position: relative;
+  z-index: 1;
+  top: -395px;
+  left: 385px;
+}
+#r2_specs:hover {
+  opacity: 0.5;
+}
+#r2_saturn {
+  width: 45px;
+  height: 26px;
+  position: relative;
+  z-index: 1;
+  top: -675px;
+  left: 520px;
+}
+#r2_saturn:hover {
   opacity: 0.5;
 }
