--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,20 @@ body {
   width: 100%;
   background-color:#7D5B52;
 }
+
+#level1Img {
+  width: 100%;
+  height: 600px;
+  background-color:#7D5B52;
+  position: relative;
+  z-index: 3;
+  top: -865px;
+  left: 0px;
+  opacity: 0.5;
+
+
+
+}
 .roomarea {
   /*margin-top: 15px;*/
   border: 10px solid #52343A;
