--- a/css/styles.css
+++ b/css/styles.css
@@ -10,16 +10,18 @@
   text-shadow: 4px 4px #000;
   text-align: center;
 }
+
 .boxed {
   width:1180px;
   height: 673px;
   margin-left: -15px;
-
 }
+
 .box1 {
   width: 980px;
   float: left;
 }
+
 .box2 {
   width: 200px;
   float: left;
@@ -65,6 +67,7 @@ body {
   width: 100%;
   background-color:#7D5B52;
 }
+
 #room2 {
   width: 100%;
   background-color:#7D5B52;
@@ -76,13 +79,22 @@ body {
   background-color:#7D5B52;
   position: relative;
   z-index: 3;
-  top: -865px;
+  top: -705px;
   left: 0px;
   opacity: 0.5;
-
-
-
 }
+
+#level2Img {
+  width: 100%;
+  height: 600px;
+  background-color:#7D5B52;
+  position: relative;
+  z-index: 4;
+  top: -700px;
+  left: 0px;
+  opacity: 0.5;
+}
+
 .roomarea {
   /*margin-top: 15px;*/
   border: 10px solid #52343A;
@@ -90,22 +102,26 @@ body {
   margin-bottom: 20px;
   width: 1200px;
 }
+
 #itemsColumn {
   height: 100%;
 }
+
 .col-md-2 {
   padding: 0;
   margin: 0;
-
   height: 100%;
 }
+
 .col-md-10 {
   padding: 0;
   margin: 0;
 }
+
 .objects {
   height: 0px;
 }
+
 #door {
   width: 125px;
   height: 215px;
@@ -117,28 +133,30 @@ body {
 #door:hover {
   background-color: #F2F2F2;
   opacity: .4;
-
 }
+
 .card-img-top {
   width: 100%;
   margin-top: 15px;
 }
+
 .card {
   margin: auto;
 }
 
-
 #itemsColumn {
   padding: 15px;
 }
+
 #itemsColumn h3 {
   text-align: center;
-
   border-bottom: 1px solid #292929;
 }
+
 #inventory {
   text-align: left;
 }
+
 #inventory li {
   text-align: left;
   list-style: none;
@@ -151,8 +169,8 @@ body {
   font-family: monospace;
   font-size: 20px;
   text-align: center;
-
 }
+
 #instructionsColumn li {
   list-style: none;
 }
@@ -171,6 +189,7 @@ blockquote footer {
   color: #F2F2F2;
   font-size: 18pt;
 }
+
 .text-center {
   color: #F2F2F2;
 }
@@ -186,6 +205,7 @@ blockquote footer {
   top: -455px;
   left: 360px;
 }
+
 #key1:hover {
   opacity: 0.5;
 }
@@ -199,9 +219,11 @@ blockquote footer {
   top: -345px;
   left: 665px;
 }
+
 #r2_book:hover {
   opacity: 0.5;
 }
+
 #r2_specs {
   width: 45px;
   height: 15px;
@@ -210,9 +232,11 @@ blockquote footer {
   top: -395px;
   left: 385px;
 }
+
 #r2_specs:hover {
   opacity: 0.5;
 }
+
 #r2_saturn {
   width: 45px;
   height: 26px;
@@ -221,6 +245,7 @@ blockquote footer {
   top: -675px;
   left: 520px;
 }
+
 #r2_saturn:hover {
   opacity: 0.5;
-
+}
