--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@
   width: 200px;
   float: left;
 }
-
+s
 .header h1 {
   text-align: center;
   position: relative;
@@ -39,7 +39,7 @@
 .instructionsTitle {
   text align: center;
   font-weight: bold;
-  font-size: 25pt;
+  font-size: 27pt;
 }
 
 body {
@@ -146,28 +146,34 @@ body {
 
 #itemsColumn {
   padding: 15px;
+  text-align: center;
 }
 
 #itemsColumn h3 {
   text-align: center;
   border-bottom: 1px solid #292929;
+  font-size: 32px;
 }
 
 #inventory {
   text-align: left;
+  text-align: center;
+  font-weight: bold;
+  font-size: 27px;
+  font-variant: small-caps;
 }
 
 #inventory li {
   text-align: left;
   list-style: none;
   margin-left: -21px;
+  text-align: center;
 }
-
 
 #instructionsColumn {
   /*margin-top: -18px;*/
-  font-family: monospace;
-  font-size: 20px;
+  font-family: sans-serif;
+  font-size: 24px;
   text-align: center;
 }
 
