add alert for skipping levels

--- a/css/styles.css
+++ b/css/styles.css
@@ -255,3 +255,9 @@ blockquote footer {
 #r2_saturn:hover {
   opacity: 0.5;
 }
+
+/*#fontAlert {
+  font-size: 20px;
+  font-style: oblique;
+  font-family: sans-serif;
+}*/
