--- a/css/styles.css
+++ b/css/styles.css
@@ -74,32 +74,25 @@ body {
 }
 
 #level1Img {
-  width: 100%;
-  height: 600px;
+  width: 980px;
+  height: 653px;
   background-color:#7D5B52;
   position: relative;
   z-index: 3;
-  top: -855px;
+  top: -889px;
   left: 0px;
   opacity: 0.5;
 }
 
 #level2Img {
-  width: 100%;
-  height: 600px;
   background-color:#7D5B52;
-
-
-  opacity: 0.5;
-}
-.levelannounce {
-  background-color: #000;
   width: 980px;
   height: 653px;
   z-index: 4;
   position: relative;
   top: -724px;
   left: 0px;
+  opacity: 0.5;
 }
 
 .roomarea {
