add roomfour.html functionality

--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,18 @@ body {
   opacity: 0.5;
 }
 
+#level4Img {
+  background-color:#7D5B52;
+  width: 980px;
+  height: 653px;
+  z-index: 4;
+  position: relative;
+  top: -769px;
+  left: 0px;
+  opacity: 0.5;
+}
+
+
 .roomarea {
   /*margin-top: 15px;*/
   border: 10px solid #52343A;
