--- a/css/styles.css
+++ b/css/styles.css
@@ -205,11 +205,11 @@ body {
   /*margin-top: -18px;*/
   font-family: sans-serif;
   font-size: 24px;
-  text-align: center;
+  /*text-align: center;*/
 }
 
 #instructionsColumn li {
-  list-style: none;
+  /*list-style: none;*/
 }
 
 #userReview {
